@@ -8,6 +8,9 @@ Zope Changes
 
     Bugs fixed
 
+      - Launchpad #143813: zopectl now exits non-zero when
+        child processes fail.
+
       - Launchpad #173658:  Removed dead code in OFS.Traversable's
         'unrestrictedTraverse' (apparent NameError).
 
